bug 88509 - moving of a GetFrameType and layoutAtom from ifdef bidi land. r=dbaron sr=sfraser