layout/forms/nsListControlFrame.cpp
@@ -3202,7 +3202,6 @@ NS_IMETHODIMP nsListControlFrame::MoveTo(nsIPresContext* aPresContext, nscoord a
   }
 }
 
-#ifdef IBMBIDI
 NS_IMETHODIMP
 nsListControlFrame::GetFrameType(nsIAtom** aType) const
 {
@@ -3211,7 +3210,6 @@ nsListControlFrame::GetFrameType(nsIAtom** aType) const
   NS_ADDREF(*aType);
   return NS_OK;
 }
-#endif // IBMBIDI
 
 //---------------------------------------------------------
 NS_IMETHODIMP 
